<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/signInBackgroundImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="18dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/loginWithEmailTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:srcCompat="@drawable/bg_sign_in_up"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/welcomeBackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/sign_in_welcome_back"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/signInFacebookButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/signInBackgroundImageView"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/signInFacebookButton"
            style="@style/Button.IconButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/sign_in_continue_with_facebook"
            android:textColor="@color/text_white"
            app:icon="@drawable/ic_facebook"
            app:iconPadding="36dp"
            app:layout_constraintBottom_toTopOf="@+id/signInGoogleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeBackTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInGoogleButton"
            style="@style/Button.IconButton.Ghost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="5dp"
            android:text="@string/sign_in_continue_with_google"
            android:textColor="@color/text_black"
            app:icon="@drawable/ic_google"
            app:iconPadding="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/signInBackgroundImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInFacebookButton" />

        <TextView
            android:id="@+id/loginWithEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_in_or_log_in_with_email"
            android:textAlignment="center"
            android:textColor="@color/text_grey"
            app:layout_constraintBottom_toTopOf="@+id/signInEmailAddressEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInBackgroundImageView"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/signInEmailAddressEditText"
            style="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/signInPasswordEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginWithEmailTextView" />

        <EditText
            android:id="@+id/signInPasswordEditText"
            style="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/logInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInEmailAddressEditText" />

        <Button
            android:id="@+id/logInButton"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="41dp"
            android:backgroundTint="@color/sky_blue"
            android:text="@string/sign_in_log_in"
            android:textColor="@color/text_white"
            app:layout_constraintBottom_toTopOf="@+id/forgotPassTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInPasswordEditText" />

        <TextView
            android:id="@+id/forgotPassTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_in_forgot_password"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            app:layout_constraintBottom_toTopOf="@+id/alreadyHaveAccountTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logInButton" />

        <TextView
            android:id="@+id/alreadyHaveAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/sign_in_already_have_an_account_sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>