<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/courseDetailsAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/text_black"
            app:layout_scrollFlags="scroll|snap">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/img_course_details_preview"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_scrollFlags="scroll|snap">

            <TextView
                android:id="@+id/courseDetailsTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/course_details_happy_morning"
                android:textAlignment="textStart"
                android:textColor="@color/text_black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/courseDetailsTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:letterSpacing="0.05"
                android:text="@string/course_details_course"
                android:textAlignment="textStart"
                android:textColor="@color/text_grey"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/courseDetailsTitleTextView" />

            <TextView
                android:id="@+id/courseDetailsDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/course_details_description"
                android:textAlignment="textStart"
                android:textColor="@color/text_grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/courseDetailsTypeTextView" />

            <TextView
                android:id="@+id/courseDetailsFavoritsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/course_details_favorits"
                android:textAlignment="center"
                android:textColor="@color/text_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/courseDetailsDescriptionTextView" />

            <TextView
                android:id="@+id/courseDetailsLesteningTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/course_details_lestening"
                android:textAlignment="center"
                android:textColor="@color/text_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/courseDetailsFavoritsTextView"
                app:layout_constraintTop_toBottomOf="@id/courseDetailsDescriptionTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/courseDetailsTabsTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/course_details_pick_a_nnrrator"
            android:textAlignment="textStart"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            app:layout_scrollFlags="noScroll" />

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_scrollFlags="noScroll"
            app:tabIndicatorColor="@color/sky_blue"
            app:tabIndicatorFullWidth="false"
            app:tabSelectedTextColor="@color/sky_blue"
            app:tabTextColor="@color/text_grey">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_details_male_voice" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_details_female_voice" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courseDetailsMusicRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/courseDetailsDownloadFAB"
        style="@style/Widget.MaterialComponents.FloatingActionButton.MyFAB"
        android:layout_gravity="top|end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_music_download"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/courseDetailsLikeFAB"
        style="@style/Widget.MaterialComponents.FloatingActionButton.MyFAB"
        android:layout_gravity="top|end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="90dp"
        android:src="@drawable/ic_music_like"
        tools:ignore="ContentDescription" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>